valueOf is Java 1.5+ only
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@687323 13f79535-47bb-0310-9956-ffa450edef68